[project]
name = "col4a3-2025"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "regi_legradi",email = "legradi.regina@phd.semmelweis.hu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.10"
polars = "1.9.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scipy = "^1.14.0"
jupyter-contrib-nbextensions = "^0.7.0"
pyarrow = "^20.0.0"
